--- a/css/h5splayer.css
+++ b/css/h5splayer.css
@@ -11,6 +11,17 @@
 	background-color:#000000;
 }
 
+.h5videoCanvas {
+	display: none;
+}
+
+.h5Canvas {
+	width: 100%;
+    height: 100%;
+	background-color:#000000;
+}
+
+
 .h5videodiv{
     display: inline-block;
 	position:relative;
