--- a/css/h5splayer.css
+++ b/css/h5splayer.css
@@ -4,13 +4,19 @@
     border: 1px solid black;
 	background-color:#000000;
 }
+.h5videowrapper{
+    padding: 0px;
+    height: 100%;
+    width: 100%;
+}
 
 .h5video1 {
 	width: 100%;
     height: 100%;
 	background-color:#000000;
+	object-fit: fill ;
 }
-
+/* contain  cover fill  none  */
 .h5videoCanvas {
 	display: none;
 }
