--- a/css/h5splayer.css
+++ b/css/h5splayer.css
@@ -10,6 +10,11 @@
     width: 100%;
 }
 
+.h5container {
+    position:relative;
+    display:inline-block;
+}
+
 .h5video1 {
 	width: 100%;
     height: 100%;
