--- a/css/h5splayer.css
+++ b/css/h5splayer.css
@@ -19,9 +19,9 @@
 	width: 100%;
     height: 100%;
 	background-color:#000000;
-	object-fit: fill ;
+    object-fit: fill;
 }
-/* contain  cover fill  none  */
+/* contain  cover fill  none //object-fit: fill;transform:rotate(90deg)*/
 .h5videoCanvas {
 	display: none;
 }
